# simple_bbs

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
docker/sass/: Dockerfile  docker-entrypoint.sh
memo/: show_threads.md
migrations/2020-06-17-033720_create_tables/: up.sql
src/: basic_types.rs  dbaccess.rs  error.rs  forms.rs  functions.rs  globals.rs  lib.rs  main.rs  models.rs  render.rs  schema.rs  tests.rs
static/css/: stylesheet.css  stylesheet.css.map
static/js/: script.js
stylesheets/: _colors.scss  stylesheet.scss
templates/: not_found.html.hbs  partial_pagination.html.hbs  posts.html.hbs  test.html.hbs  threads.html.hbs
