[package]
name = "simple_bbs"
version = "0.1.0"
authors = ["Hiroyuki TAJIMA <hiroyuki.tajima.727@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
handlebars = "1.1"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["diesel_postgres_pool", "handlebars_templates", "serve"]

[dev-dependencies]
parking_lot = { version = "0.10", features = ["nightly"] }
